# ai-mail-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  USECASE.md  agent.py  pyproject.toml
scripts/: generate_test_data.py  ingest_to_chroma.py  run_agent.py  setup_gmail.py
src/: config.py  main.py
src/agents/: analyzer.py  care_reporter.py  classifier.py  contract_replier.py  drafter.py  orchestrator.py  reviewer.py  scheduler.py  signer.py
src/calendar/: gcal_client.py
src/graph/: nodes.py  orchestrator.py  state.py  workflow.py
src/mail/: attachment.py  gmail_client.py  parser.py  sender.py
src/prompts/: care_reporter.txt  classifier.txt  contract_replier.txt  drafter.txt  reviewer.txt  scheduler.txt  signer.txt
src/rag/: embeddings.py  retriever.py  vectorstore.py
src/utils/: cost_tracker.py  logger.py  notifier.py
tests/: test_classifier.py  test_drafter.py  test_workflow.py
tests/fixtures/: sample_emails.json
