[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-mail-agent"
version = "0.1.0"
description = "요양기관 AI 메일 자동 응답 에이전트"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
    "langgraph>=0.2",
    "openai>=1.0",
    "chromadb>=0.4",
    "sentence-transformers>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "markdown>=3.5",
    "fpdf2>=2.7",
    "plyer>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
